fix: endereço de pastas / padronização do banco de dados

--- a/codigos/back/demo/src/main/resources/application.properties
+++ b/codigos/back/demo/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=demo
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/db_safetrade
-spring.datasource.username=sergio
-spring.datasource.password=Galodoido48
+spring.datasource.username=safetrade
+spring.datasource.password=safetrade
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
