create back end com erro

--- a/src/codigos/back/demo/src/main/resources/application.properties
+++ b/src/codigos/back/demo/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=demo
+spring.application.name=safetrade
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/db_safetrade
 spring.datasource.username=safetrade
