fix: patronização do db

--- a/src/codigos/back/demo/src/main/resources/application.properties
+++ b/src/codigos/back/demo/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=safetrade
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/safeTrade
-spring.datasource.username=lucas
-spring.datasource.password=Galodoido48
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_safetrade
+spring.datasource.username=safetrade
+spring.datasource.password=safetrade
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
